# stylus-package-manager

./: README.md
dapp/: index.html  package-lock.json  package.json
dapp/src/: App.tsx  config.ts  types.ts
dapp/src/components/: Debugger.tsx  Navigation.tsx  PackageCard.tsx  SourceCodePreview.tsx  VersionComparison.tsx
dapp/src/pages/: Dashboard.tsx  PackageDetail.tsx  Packages.tsx  PublishPackage.tsx
src/: lib.rs
stylus/src/: lib.rs
stylus_pm/: Cargo.toml
stylus_pm/contracts/: Token.toml
stylus_pm/src/: main.rs
stylus_pm/storage/: registry.json
stylus_pm/storage/contracts/: Token-1.0.0.sol
