[package]
name = "cargo-stylus_pm"
version = "0.1.0"
edition = "2021"
description = "A package manager for Stylus projects"
authors = ["Your Name <your.email@example.com>"]

# This ensures the binary can be called as `cargo stylus_pm`
[[bin]]
name = "cargo-stylus_pm"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sha2 = "0.10"